добавлены ссылки для перехода с одной страницы на другую и наоборот

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -7,11 +7,16 @@
     <title>Gallery</title>
 </head>
 <body>
-    <header>Gallery</header>
+    <header>
+        <nav>
+            <a href="./index.html">Info page</a>
+            
+            </nav>
+    </header>
     <main>
-        <img src="./images/img1.jpeg" alt="img1" >
-        <img src="./images/img2.jpeg" alt="img2" >
-        <img src="./images/img3.jpeg" alt="img3">
+        <img src="../images/img1.jpeg" alt="img1" >
+        <img src="../images/img2.jpeg" alt="img2" >
+        <img src="../images/img3.jpeg" alt="img3">
     </main>
 <footer>Footer</footer>
     
