--- a/pages/index.html
+++ b/pages/index.html
@@ -7,7 +7,12 @@
     <title>Info page</title>
 </head>
 <body>
-    <header> Уильям Шекспир цитаты</header>
+    
+    <nav>
+        <a href="./gallery.html">Gallery</a>
+        
+        </nav>
+        <header> Уильям Шекспир цитаты</header>
     <main>
         <blockquote>
             <q>Музыка глушит печаль.</q>
